[package]
name = "async-mutex"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

[dev-dependencies]
futures = { version = "0.3.13", features = ["executor", "thread-pool"] }
pin-project = "1.0.5"
either = "1.6.1"
rand = "0.8.3"

[target.'cfg(loom)'.dependencies]
loom = { path = "loom", version = "0.4.0", features = ["futures"] }