[package]
name = "async-mutex"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

[dependencies]
#async-cancel = { path = "../async-cancel" }

[dev-dependencies]
futures = { version = "0.3.13", features = ["executor", "thread-pool"] }
pin-project = "1.0.5"
either = "1.6.1"

[target.'cfg(loom)'.dependencies]
loom = { path = "loom", version = "0.4.0", features = ["futures", "checkpoint"] }

[target.'cfg(not(loom))'.dev-dependencies]
rand = "0.8.3"
num_cpus = "1.13.0"
async-std = "1.9.0"
async-mutex = "1.4.0"
futures-locks = "0.6.0"
tokio = { version = "1.3.0", features = ["sync", "rt", "rt-multi-thread"] }
cpu-time = "1.0.0"
futures-util = "0.3.13"